# wasm-fuzzy-search

./: .gitignore  Cargo.toml  LICENSE  LICENSE_MIT  Package Control Messages  README.md  build.sh
pkg/: fuzzy_search.d.ts  fuzzy_search.js  fuzzy_search_bg.wasm  package-lock.json  package.json
src/: lib.rs
